[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.98"
arborium = "2.1"
auk = { version = "0.6.0", path = "crates/auk" }
auk_plumage = { version = "0.1.0", path = "crates/auk_plumage" }
auk_ui = { version = "0.1.0", path = "crates/auk_ui" }
clap = "4.5.40"
derive_more = "0.99.18"
indexmap = "2.1.0"
indoc = "2.0.4"
insta = "1.34.0"
paste = "1.0.15"
pulldown-cmark = { version = "0.9.3", default-features = false }
pulldown-cmark-escape = "0.11.0"
razorbill = { git = "https://github.com/maxdeviant/razorbill", rev = "861aa6c11d54f546af99aa2e9e56351f2ba5da2d" }
slug = "0.1.5"
tokio = "1.45.1"
walkdir = "2.5.0"

[patch.'https://github.com/maxdeviant/auk']
auk = { path = "crates/auk" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
